# SDL_gfx

./: .gitignore  .gitmodules  CMakeLists.txt  SDL2_gfx.spec.in  SDL2_gfxConfig.cmake.in  sdl2_gfx-config-version.cmake.in  sdl2_gfx-config.cmake.in
Xcode/SDL2_gfx/SDL2_gfx.xcodeproj/: project.pbxproj
cmake/: PrivateSdlFunctions.cmake
